--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
       <label for="observation">Observaciones:</label>
       <textarea id="observation" name="observation" rows="5" cols="33" ></textarea>
 
+      <label id="valoracion" for="valoracion">Valoración:</label>
+      <div class="rating">
+
+        <input type="radio" id="estrella5" name="valoracion" value="5">
+        <label for="estrella5"></label>
+        <input type="radio" id="estrella4" name="valoracion" value="4">
+        <label for="estrella4"></label>
+        <input type="radio" id="estrella3" name="valoracion" value="3">
+        <label for="estrella3"></label>
+        <input type="radio" id="estrella2" name="valoracion" value="2">
+        <label for="estrella2"></label>
+        <input type="radio" id="estrella1" name="valoracion" value="1">
+        <label for="estrella1"></label>
+
+      </div>
+
       <button id="submitButton" type="submit">Enviar</button>
     </form>
   </div>
